syntax = "proto3";

package api.common;

option go_package = "github.com/aide-family/moon/pkg/api/common;common";

enum DatasourceType {
  DATASOURCE_TYPE_UNSPECIFIED = 0;
  DATASOURCE_TYPE_METRIC = 1;
  DATASOURCE_TYPE_LOG = 2;
  DATASOURCE_TYPE_EVENT = 3;
  DATASOURCE_TYPE_TRACE = 4;
}

